Fix white space at bottom of login page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,10 @@ body {
   overflow-x: hidden;
 }
 
+#root {
+  min-height: 100vh;
+}
+
 a {
   color: var(--primary);
   text-decoration: none;
